# Mobile-retail-bot

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Brain storming on orignal concept of system.txt  DASHBOARD_PLAN_OWNER.md  Dockerfile  PONYTAIL-DEBT.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: launch.json
.context/: HANDOFF.md
.github/workflows/: ci.yml
config/: settings.py
docs/: 00-HOW-TO-USE.md  01-VISION.md  02-SCOPE.md  03-ARCHITECTURE.md  04-TECH-DECISIONS.md  05-CONVENTIONS.md  06-ROADMAP.md  07-CURRENT-STATE.md  08-FILE-MAP.md  09-GLOSSARY.md  10-DATA-MODEL.md  11-API-CONTRACTS.md  12-OPEN-QUESTIONS.md  13-ENGINEERING-ETHOS.md  SECURITY-AUDIT.md  SPEC-source.md
docs/DECISIONS/: ADR-001-tech-stack.md  ADR-002-telegram-first-testing.md  ADR-003-supabase-rls-isolation.md  ADR-004-llm-provider-abstraction.md  ADR-007-supabase-mcp.md  (+5 more)
mcp_servers/: README.md  supabase_server.py
migrations/: 001_init.sql  002_storage_buckets.sql  003_order_drafts.sql  004_negotiation.sql  005_reports_bucket.sql  006_rls_lockdown.sql  007_rider_telegram.sql  008_cod_custody.sql  009_shopowner_messages.sql  010_friendly_ids_counter_sales.sql  020_dashboard_users.sql  021_message_relay.sql  022_pos_invoices.sql  023_offers_delivery_numbering.sql  024_platform_settings.sql  025_pipeline_events_redis_ops.sql  026_status_columns.sql
scripts/: apply_migration.py  run_bot.sh  run_bots_live.sh  run_dev.sh  seed_dashboard_users.py  seed_platform_owner.py  seed_shop_bots.py  seed_test_catalog.py
tests/: conftest.py
(+109 files in other folders)
