[project]
name = "multi-shop-chatbot"
version = "0.1.0"
description = "Multi-shop WhatsApp + Telegram chatbot (30 shops, tenant-isolated). See docs/SPEC-source.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
